Fix Port Lab API compatibility